// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select supports multi select 1`] = `
<div
  class="container"
>
  <div
    class="selection"
    tabindex="0"
  >
    <label
      class="container inline"
      role="presentation"
    >
      <div
        class="label"
      >
        One, Three
      </div>
    </label>
    <svg
      class="arrow"
      fill="none"
      height="4"
      viewBox="0 0 8 4"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4L0 0L8 0L4 4Z"
        fill="#a5b1c4"
      />
    </svg>
  </div>
  <div
    class="wrapper"
  >
    <div
      class="option"
      tabindex="0"
    >
      <div
        class="container"
      >
        <label
          class="container right"
          role="presentation"
        >
          <div
            class="label"
          >
            One
          </div>
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.33333 2.5H16.6667C16.8877 2.5 17.0996 2.5878 17.2559 2.74408C17.4122 2.90036 17.5 3.11232 17.5 3.33333V16.6667C17.5 16.8877 17.4122 17.0996 17.2559 17.2559C17.0996 17.4122 16.8877 17.5 16.6667 17.5H3.33333C3.11232 17.5 2.90036 17.4122 2.74408 17.2559C2.5878 17.0996 2.5 16.8877 2.5 16.6667V3.33333C2.5 3.11232 2.5878 2.90036 2.74408 2.74408C2.90036 2.5878 3.11232 2.5 3.33333 2.5ZM9.16917 13.3333L15.0608 7.44083L13.8825 6.2625L9.16917 10.9767L6.81167 8.61917L5.63333 9.7975L9.16917 13.3333Z"
              fill="#3385FF"
            />
          </svg>
          <input
            checked=""
            class="input"
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <div
      class="option"
      tabindex="0"
    >
      <div
        class="container"
      >
        <label
          class="container right"
          role="presentation"
        >
          <div
            class="label"
          >
            Two
          </div>
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.33333 2.5H16.6667C16.8877 2.5 17.0996 2.5878 17.2559 2.74408C17.4122 2.90036 17.5 3.11232 17.5 3.33333V16.6667C17.5 16.8877 17.4122 17.0996 17.2559 17.2559C17.0996 17.4122 16.8877 17.5 16.6667 17.5H3.33333C3.11232 17.5 2.90036 17.4122 2.74408 17.2559C2.5878 17.0996 2.5 16.8877 2.5 16.6667V3.33333C2.5 3.11232 2.5878 2.90036 2.74408 2.74408C2.90036 2.5878 3.11232 2.5 3.33333 2.5ZM4.16667 4.16667V15.8333H15.8333V4.16667H4.16667Z"
              fill="#BFCADA"
            />
          </svg>
          <input
            class="input"
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <div
      class="option"
      tabindex="0"
    >
      <div
        class="container"
      >
        <label
          class="container right"
          role="presentation"
        >
          <div
            class="label"
          >
            Three
          </div>
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.33333 2.5H16.6667C16.8877 2.5 17.0996 2.5878 17.2559 2.74408C17.4122 2.90036 17.5 3.11232 17.5 3.33333V16.6667C17.5 16.8877 17.4122 17.0996 17.2559 17.2559C17.0996 17.4122 16.8877 17.5 16.6667 17.5H3.33333C3.11232 17.5 2.90036 17.4122 2.74408 17.2559C2.5878 17.0996 2.5 16.8877 2.5 16.6667V3.33333C2.5 3.11232 2.5878 2.90036 2.74408 2.74408C2.90036 2.5878 3.11232 2.5 3.33333 2.5ZM9.16917 13.3333L15.0608 7.44083L13.8825 6.2625L9.16917 10.9767L6.81167 8.61917L5.63333 9.7975L9.16917 13.3333Z"
              fill="#3385FF"
            />
          </svg>
          <input
            checked=""
            class="input"
            type="checkbox"
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select supports option deselect 1`] = `
<div
  class="container"
>
  <div
    class="selection"
    tabindex="0"
  >
    <label
      class="container inline"
      role="presentation"
    >
      <div
        class="label"
      >
        One, Three
      </div>
    </label>
    <svg
      class="arrow"
      fill="none"
      height="4"
      viewBox="0 0 8 4"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4L0 0L8 0L4 4Z"
        fill="#a5b1c4"
      />
    </svg>
  </div>
  <div
    class="wrapper"
  >
    <div
      class="option"
      tabindex="0"
    >
      <div
        class="container"
      >
        <label
          class="container right"
          role="presentation"
        >
          <div
            class="label"
          >
            One
          </div>
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.33333 2.5H16.6667C16.8877 2.5 17.0996 2.5878 17.2559 2.74408C17.4122 2.90036 17.5 3.11232 17.5 3.33333V16.6667C17.5 16.8877 17.4122 17.0996 17.2559 17.2559C17.0996 17.4122 16.8877 17.5 16.6667 17.5H3.33333C3.11232 17.5 2.90036 17.4122 2.74408 17.2559C2.5878 17.0996 2.5 16.8877 2.5 16.6667V3.33333C2.5 3.11232 2.5878 2.90036 2.74408 2.74408C2.90036 2.5878 3.11232 2.5 3.33333 2.5ZM9.16917 13.3333L15.0608 7.44083L13.8825 6.2625L9.16917 10.9767L6.81167 8.61917L5.63333 9.7975L9.16917 13.3333Z"
              fill="#3385FF"
            />
          </svg>
          <input
            checked=""
            class="input"
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <div
      class="option"
      tabindex="0"
    >
      <div
        class="container"
      >
        <label
          class="container right"
          role="presentation"
        >
          <div
            class="label"
          >
            Two
          </div>
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.33333 2.5H16.6667C16.8877 2.5 17.0996 2.5878 17.2559 2.74408C17.4122 2.90036 17.5 3.11232 17.5 3.33333V16.6667C17.5 16.8877 17.4122 17.0996 17.2559 17.2559C17.0996 17.4122 16.8877 17.5 16.6667 17.5H3.33333C3.11232 17.5 2.90036 17.4122 2.74408 17.2559C2.5878 17.0996 2.5 16.8877 2.5 16.6667V3.33333C2.5 3.11232 2.5878 2.90036 2.74408 2.74408C2.90036 2.5878 3.11232 2.5 3.33333 2.5ZM4.16667 4.16667V15.8333H15.8333V4.16667H4.16667Z"
              fill="#BFCADA"
            />
          </svg>
          <input
            class="input"
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <div
      class="option"
      tabindex="0"
    >
      <div
        class="container"
      >
        <label
          class="container right"
          role="presentation"
        >
          <div
            class="label"
          >
            Three
          </div>
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.33333 2.5H16.6667C16.8877 2.5 17.0996 2.5878 17.2559 2.74408C17.4122 2.90036 17.5 3.11232 17.5 3.33333V16.6667C17.5 16.8877 17.4122 17.0996 17.2559 17.2559C17.0996 17.4122 16.8877 17.5 16.6667 17.5H3.33333C3.11232 17.5 2.90036 17.4122 2.74408 17.2559C2.5878 17.0996 2.5 16.8877 2.5 16.6667V3.33333C2.5 3.11232 2.5878 2.90036 2.74408 2.74408C2.90036 2.5878 3.11232 2.5 3.33333 2.5ZM9.16917 13.3333L15.0608 7.44083L13.8825 6.2625L9.16917 10.9767L6.81167 8.61917L5.63333 9.7975L9.16917 13.3333Z"
              fill="#3385FF"
            />
          </svg>
          <input
            checked=""
            class="input"
            type="checkbox"
          />
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select supports single select 1`] = `
<div
  class="container"
>
  <div
    class="selection"
    tabindex="0"
  >
    <label
      class="container inline"
      role="presentation"
    >
      <div
        class="label"
      >
        One
      </div>
    </label>
    <svg
      class="arrow"
      fill="none"
      height="4"
      viewBox="0 0 8 4"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4L0 0L8 0L4 4Z"
        fill="#a5b1c4"
      />
    </svg>
  </div>
  <div
    class="wrapper"
  >
    <div
      class="option"
      tabindex="0"
    >
      <label
        class="container inline"
        role="presentation"
      >
        <div
          class="label"
        >
          One
        </div>
      </label>
    </div>
    <div
      class="option"
      tabindex="0"
    >
      <label
        class="container inline"
        role="presentation"
      >
        <div
          class="label"
        >
          Two
        </div>
      </label>
    </div>
    <div
      class="option"
      tabindex="0"
    >
      <label
        class="container inline"
        role="presentation"
      >
        <div
          class="label"
        >
          Three
        </div>
      </label>
    </div>
  </div>
</div>
`;
